...
              <View style={styles.sectionHeader}>
                <Users size={22} color={currentTheme.primary} />
                <AppText
                  variant="h2"
                  style={[styles.sectionTitle, { color: currentTheme.text }]}
                >
                  Partenariats
                </AppText>
              </View>
              {currentPartnerships.length === 0 &&
              pastPartnerships.length === 0 ? (
                <AppText
                  variant="body"
...
              <View style={styles.sectionHeader}>
                <Award size={22} color={currentTheme.primary} />
                <AppText
                  variant="h2"
                  style={[styles.sectionTitle, { color: currentTheme.text }]}
                >
                  Résultats & classement
                </AppText>
              </View>
              {results.length === 0 ? (
                <AppText
                  variant="body"
                  style={{ color: currentTheme.textSecondary }}
...
